[tool.poetry]
name = "ri_projekat"
version = "0.1.0"
description = ""
authors = ["popovic-olivera <mi16064@alas.matf.bg.ac.rs>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
pgzero = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
